<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_no_logo"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/login_credential_avnetLogo"
        android:layout_weight="2"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="false"
        android:src="@drawable/login_logo_transparent_bg" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.sirius.madness.ui.views.CustomFontTextView
            style="@style/montserratRegular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_tutorial_welcome"
            android:id="@+id/login_tutorial_03_welcome_banner"
            android:background="@color/theme_primary_base"
            android:textColor="@android:color/white"
            android:layout_weight="2"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/textView4"
            android:background="@android:color/white" />

    </LinearLayout>

    <com.sirius.madness.ui.views.CustomFontTextView
        style="@style/montserratLight"
        android:id="@+id/login_tutorial_03_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:alpha="0.9"
        android:textColor="@android:color/white"
        android:text="@string/login_tutorial_03_message" />

    <com.sirius.madness.ui.views.CustomFontTextView
        style="@style/montserratRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tutorial_next"
        android:id="@+id/login_tutorial_03_next"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/login_button_welcome_01_shadow"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

</LinearLayout>