<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <!--<LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImageGoogleMaps"
                    android:src="@drawable/google_maps_icon" />

                <madnessf.ui.views.CustomFontTextView
                    android:id="@+id/AboutGoogleMaps"
                    style="@style/montserratLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/about_google_maps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImageLinkedInBlue"
                    android:src="@drawable/linked_in_blue_icon"
                    android:focusableInTouchMode="true"
                    android:adjustViewBounds="false" />

                <com.sirius.madness.ui.views.CustomFontTextView
                    android:id="@+id/AboutLinkedIn"
                    style="@style/montserratLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/about_linked_in"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImageTwitterBlue"
                    android:src="@drawable/twitter_blue_icon"
                    android:focusableInTouchMode="true" />

                <com.sirius.madness.ui.views.CustomFontTextView
                    android:id="@+id/AboutTwitter"
                    style="@style/montserratLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/about_twitter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImageBluemix"
                    android:src="@drawable/bluemix_icon"
                    android:focusableInTouchMode="true" />

                <com.sirius.madness.ui.views.CustomFontTextView
                    android:id="@+id/AboutBlueMix"
                    style="@style/montserratLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/about_bluemix"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
